# CloudHaskell

./: .gitignore  LICENSE  README  README.md  RegServ.hs  Remote.hs  Test-Channel-Global.hs  Test-Channel-Merge.hs  Test-Channel.hs  Test-Closure.hs  Test-Dialog.hs  Test-Discover.hs  Test-Global.hs  Test-MapReduce.hs  Test-Monitor.hs  config  notes.txt  remote.cabal  test-POTS.hs  test-POTS1.hs  test-POTS2.hs
POTS/: FakeTeleOS.hi  FakeTeleOS.hs  POTS.hi  StateMachine.hi  StateMachine.hs
Remote/: Call.hs  Channel.hs  Closure.hs  Encoding.hs  File.hs  Init.hs  Peer.hs  Process.hs  Reg.hs  Task.hs
examples/kmeans/: KMeans3.hs  MakeData.hs  awsgo
examples/kmeans1/: KMeans.hs  KMeansCommon.hs  MakeData.hs  awsgo  kmeans  kmeans-viewer
examples/kmeans2/: KMeans.hs  KMeansCommon.hs  MakeData.hs  awsgo  awskill  awslist  kmeans
examples/kmeans3/: KMeans.hs  KMeansCommon.hs  MakeData.hs
examples/pi/: Pi-2.hs  Pi6.hs  Pi7.hs  PiCommon.hs
examples/tests/: Test-Call.hs  Test-Channel-Merge.hs  Test-Channel.hs  Test-Closure.hs  Test-MapReduce.hs  Test-Message.hs  Test-Task.hs  config
util/: Diag.hs  RegServ.hs
