Name:                remote
Version:             0.1
Cabal-Version:       >=1.8
Description:         Fault-tolerant distributed computing framework
synopsis:            Cloud Haskell
License:             BSD3
License-file:        LICENSE
Extra-Source-Files:  README
Author:              Jeff Epstein <jee36@cam.ac.uk>
Maintainer:          Jeff Epstein <jee36@cam.ac.uk>
Build-Type:          Simple
tested-with:         GHC ==6.12.1

library
  Build-Depends:       base >= 4, time, filepath, containers, network, syb, mtl, binary, bytestring, template-haskell, stm, pureMD5, utf8-string, directory
  ghc-options:         -Wall
  Extensions:          TemplateHaskell, FlexibleInstances, UndecidableInstances, CPP, ExistentialQuantification, DeriveDataTypeable
  Exposed-Modules:     Remote.Process, Remote.Encoding, Remote.Call, Remote.Reg, Remote.Peer, Remote.Init, Remote.Closure, Remote.Channel, Remote.Task, Remote

executable pi6
  Main-is:           pi/Pi6.hs
  Hs-source-dirs:    examples
  Build-Depends:     base == 4.*, containers, array == 0.3.*, remote